corrections in notebooks

--- a/code-and-notebooks/2-minimum-extended.ipynb
+++ b/code-and-notebooks/2-minimum-extended.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "# Create experiment\n",
-    "neptune.create_experiment(name='quick_start_example',\n",
+    "neptune.create_experiment(name='minimal-extended-from-notebook',\n",
     "                          params=PARAMS)"
    ]
   },
@@ -70,7 +70,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "neptune.stop()"
+   ]
   }
  ],
  "metadata": {
