--- a/code-and-notebooks/3-classification-example.ipynb
+++ b/code-and-notebooks/3-classification-example.ipynb
@@ -76,7 +76,7 @@
     "# Create experiment\n",
     "with neptune.create_experiment(name='classification_example',\n",
     "                               tags=['classification', 'tf_2'],\n",
-    "                               upload_source_files=['classification-example.py', 'requirements.txt'],\n",
+    "                               upload_source_files=['classification-example.py'],\n",
     "                               params=PARAMS):\n",
     "    # Dataset\n",
     "    fashion_mnist = keras.datasets.fashion_mnist\n",
