--- a/notebooks/3-classification-example.ipynb
+++ b/notebooks/3-classification-example.ipynb
@@ -168,7 +168,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "neptune.stop()"
+   ]
   }
  ],
  "metadata": {
