--- a/notebooks/3-classification-example.ipynb
+++ b/notebooks/3-classification-example.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "import hashlib\n",
     "import os\n",
-    "import tempfile\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import neptune\n",
@@ -49,22 +48,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define parameters\n",
-    "PARAMS = {'batch_size': 64,\n",
+    "PARAMS = {'batch_size': 16,  # 16, 32, 64\n",
     "          'n_epochs': 100,\n",
     "          'shuffle': True,\n",
-    "          'activation': 'elu',\n",
-    "          'dense_units': 128,\n",
-    "          'dropout': 0.2,\n",
-    "          'learning_rate': 0.001,\n",
+    "          'activation': 'elu',  # 'elu', 'relu'\n",
+    "          'dense_units': 128,  # 16, 32, 64, 128\n",
+    "          'dropout': 0.3,  # float between 0.0 and 1.0\n",
+    "          'learning_rate': 0.008,  # float between, say, 0.00001 and 0.01\n",
     "          'early_stopping': 10,\n",
-    "          'optimizer': 'Adam',\n",
+    "          'optimizer': 'Nadam',  # 'Adam', 'Nadam', SGD'\n",
     "          }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
    ]
   },
   {
@@ -74,93 +86,93 @@
    "outputs": [],
    "source": [
     "# Create experiment\n",
-    "with neptune.create_experiment(name='classification_example',\n",
-    "                               tags=['classification', 'tf_2'],\n",
-    "                               params=PARAMS):\n",
-    "    # Dataset\n",
-    "    fashion_mnist = keras.datasets.fashion_mnist\n",
-    "    (train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()\n",
-    "    train_images = train_images / 255.0\n",
-    "    test_images = test_images / 255.0\n",
+    "neptune.create_experiment(name='classification_example',\n",
+    "                          tags=['classification', 'tf_2'],\n",
+    "                          params=PARAMS)\n",
     "\n",
-    "    neptune.set_property('train_images_version', hashlib.md5(train_images).hexdigest())\n",
-    "    neptune.set_property('train_labels_version', hashlib.md5(train_labels).hexdigest())\n",
-    "    neptune.set_property('test_images_version', hashlib.md5(test_images).hexdigest())\n",
-    "    neptune.set_property('test_labels_version', hashlib.md5(test_labels).hexdigest())\n",
+    "# Dataset\n",
+    "fashion_mnist = keras.datasets.fashion_mnist\n",
+    "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()\n",
+    "train_images = train_images / 255.0\n",
+    "test_images = test_images / 255.0\n",
     "\n",
-    "    class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',\n",
-    "                   'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\n",
+    "neptune.set_property('train_images_version', hashlib.md5(train_images).hexdigest())\n",
+    "neptune.set_property('train_labels_version', hashlib.md5(train_labels).hexdigest())\n",
+    "neptune.set_property('test_images_version', hashlib.md5(test_images).hexdigest())\n",
+    "neptune.set_property('test_labels_version', hashlib.md5(test_labels).hexdigest())\n",
     "\n",
-    "    neptune.set_property('class_names', class_names)\n",
+    "class_names = ['T-shirt/top', 'Trouser', 'Pullover', 'Dress', 'Coat',\n",
+    "               'Sandal', 'Shirt', 'Sneaker', 'Bag', 'Ankle boot']\n",
     "\n",
-    "    for j, class_name in enumerate(class_names):\n",
-    "        plt.figure(figsize=(10, 10))\n",
-    "        label_ = np.where(train_labels == j)\n",
-    "        for i in range(9):\n",
-    "            plt.subplot(3, 3, i + 1)\n",
-    "            plt.xticks([])\n",
-    "            plt.yticks([])\n",
-    "            plt.grid(False)\n",
-    "            plt.imshow(train_images[label_[0][i]], cmap=plt.cm.binary)\n",
-    "            plt.xlabel(class_names[j])\n",
-    "        neptune.log_image('example_images', plt.gcf())\n",
+    "neptune.set_property('class_names', class_names)\n",
     "\n",
-    "    # Model\n",
-    "    model = keras.Sequential([\n",
-    "        keras.layers.Flatten(input_shape=(28, 28)),\n",
-    "        keras.layers.Dense(PARAMS['dense_units'], activation=PARAMS['activation']),\n",
-    "        keras.layers.Dropout(PARAMS['dropout']),\n",
-    "        keras.layers.Dense(PARAMS['dense_units'], activation=PARAMS['activation']),\n",
-    "        keras.layers.Dropout(PARAMS['dropout']),\n",
-    "        keras.layers.Dense(PARAMS['dense_units'], activation=PARAMS['activation']),\n",
-    "        keras.layers.Dropout(PARAMS['dropout']),\n",
-    "        keras.layers.Dense(10, activation='softmax')\n",
-    "    ])\n",
+    "for j, class_name in enumerate(class_names):\n",
+    "    plt.figure(figsize=(10, 10))\n",
+    "    label_ = np.where(train_labels == j)\n",
+    "    for i in range(9):\n",
+    "        plt.subplot(3, 3, i + 1)\n",
+    "        plt.xticks([])\n",
+    "        plt.yticks([])\n",
+    "        plt.grid(False)\n",
+    "        plt.imshow(train_images[label_[0][i]], cmap=plt.cm.binary)\n",
+    "        plt.xlabel(class_names[j])\n",
+    "    neptune.log_image('example_images', plt.gcf())\n",
     "\n",
-    "    if PARAMS['optimizer'] == 'Adam':\n",
-    "        optimizer = tf.keras.optimizers.Adam(\n",
-    "            learning_rate=PARAMS['learning_rate'],\n",
-    "        )\n",
-    "    elif PARAMS['optimizer'] == 'Nadam':\n",
-    "        optimizer = tf.keras.optimizers.Nadam(\n",
-    "            learning_rate=PARAMS['learning_rate'],\n",
-    "        )\n",
-    "    elif PARAMS['optimizer'] == 'SGD':\n",
-    "        optimizer = tf.keras.optimizers.SGD(\n",
-    "            learning_rate=PARAMS['learning_rate'],\n",
-    "        )\n",
+    "# Model\n",
+    "model = keras.Sequential([\n",
+    "    keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "    keras.layers.Dense(PARAMS['dense_units'], activation=PARAMS['activation']),\n",
+    "    keras.layers.Dropout(PARAMS['dropout']),\n",
+    "    keras.layers.Dense(PARAMS['dense_units'], activation=PARAMS['activation']),\n",
+    "    keras.layers.Dropout(PARAMS['dropout']),\n",
+    "    keras.layers.Dense(PARAMS['dense_units'], activation=PARAMS['activation']),\n",
+    "    keras.layers.Dropout(PARAMS['dropout']),\n",
+    "    keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
     "\n",
-    "    model.compile(optimizer=optimizer,\n",
-    "                  loss='sparse_categorical_crossentropy',\n",
-    "                  metrics=['accuracy'])\n",
+    "if PARAMS['optimizer'] == 'Adam':\n",
+    "    optimizer = tf.keras.optimizers.Adam(\n",
+    "        learning_rate=PARAMS['learning_rate'],\n",
+    "    )\n",
+    "elif PARAMS['optimizer'] == 'Nadam':\n",
+    "    optimizer = tf.keras.optimizers.Nadam(\n",
+    "        learning_rate=PARAMS['learning_rate'],\n",
+    "    )\n",
+    "elif PARAMS['optimizer'] == 'SGD':\n",
+    "    optimizer = tf.keras.optimizers.SGD(\n",
+    "        learning_rate=PARAMS['learning_rate'],\n",
+    "    )\n",
     "\n",
-    "    # Log model summary\n",
-    "    model.summary(print_fn=lambda x: neptune.log_text('model_summary', x))\n",
+    "model.compile(optimizer=optimizer,\n",
+    "              loss='sparse_categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
     "\n",
-    "    # Train model\n",
-    "    model.fit(train_images, train_labels,\n",
-    "              batch_size=PARAMS['batch_size'],\n",
-    "              epochs=PARAMS['n_epochs'],\n",
-    "              shuffle=PARAMS['shuffle'],\n",
-    "              callbacks=[keras.callbacks.LambdaCallback(on_epoch_end=lambda epoch, logs: log_data(logs)),\n",
-    "                         keras.callbacks.EarlyStopping(patience=PARAMS['early_stopping'],\n",
-    "                                                       monitor='accuracy',\n",
-    "                                                       restore_best_weights=True),\n",
-    "                         keras.callbacks.LearningRateScheduler(lr_scheduler)]\n",
-    "              )\n",
+    "# Log model summary\n",
+    "model.summary(print_fn=lambda x: neptune.log_text('model_summary', x))\n",
     "\n",
-    "    # Log model weights\n",
-    "    with tempfile.TemporaryDirectory(dir='.') as d:\n",
-    "        prefix = os.path.join(d, 'model_weights')\n",
-    "        model.save_weights(os.path.join(prefix, 'model'))\n",
-    "        for item in os.listdir(prefix):\n",
-    "            neptune.log_artifact(os.path.join(prefix, item),\n",
-    "                                 os.path.join('model_weights', item))\n",
+    "# Train model\n",
+    "model.fit(train_images, train_labels,\n",
+    "          batch_size=PARAMS['batch_size'],\n",
+    "          epochs=PARAMS['n_epochs'],\n",
+    "          shuffle=PARAMS['shuffle'],\n",
+    "          callbacks=[keras.callbacks.LambdaCallback(on_epoch_end=lambda epoch, logs: log_data(logs)),\n",
+    "                     keras.callbacks.EarlyStopping(patience=PARAMS['early_stopping'],\n",
+    "                                                   monitor='accuracy',\n",
+    "                                                   restore_best_weights=True),\n",
+    "                     keras.callbacks.LearningRateScheduler(lr_scheduler)]\n",
+    "          )\n",
     "\n",
-    "    # Evaluate model\n",
-    "    eval_metrics = model.evaluate(test_images, test_labels, verbose=0)\n",
-    "    for j, metric in enumerate(eval_metrics):\n",
-    "        neptune.log_metric('eval_' + model.metrics_names[j], metric)"
+    "# Log model weights\n",
+    "prefix = 'model_weights'\n",
+    "model.save_weights(os.path.join(prefix, 'model'))\n",
+    "for item in os.listdir(prefix):\n",
+    "    neptune.log_artifact(os.path.join(prefix, item),\n",
+    "                         os.path.join('model_weights', item))\n",
+    "\n",
+    "# Evaluate model\n",
+    "eval_metrics = model.evaluate(test_images, test_labels, verbose=0)\n",
+    "for j, metric in enumerate(eval_metrics):\n",
+    "    neptune.log_metric('eval_' + model.metrics_names[j], metric)"
    ]
   },
   {
